  * Fix text parsing for GV two-phase notifications
